# IdeaWalker

./: .activity_log.json  .embeddings.json  .gitignore  CHANGELOG.md  CMakeLists.txt  DDD_CONTEXTUAL_RAG_IDEAWALKER.md  DDD_DOCUMENT_INGESTION_CONTEXT.md  DDD_IdeaWalker_Architecture.md  DDD_WritingTrajectoryContext.tex  Doxyfile  IDEAWALKER_CONVERSATIONAL_CONTEXT.md  IDEAWALKER_CONVERSATIONAL_CONTEXT_IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_AUDIO_INGESTION.md  IdeaWalker Knowledge Base.md  IdeaWalker_Portability_Debug_Roadmap.txt  Makefile  Pipeline_Cognitivo_Ajustes.txt  Pipeline_Cognitivo_Ajustes_Revisado.txt  README.md  ROTEIRO_PORTABILIDADE_BUILD_E_RUNTIME.txt  VISUAL_ARCHITECTURE_PLAN.md  build_check.txt  build_error.txt  build_log.txt  build_log_diagnosis.txt  build_retry_2.txt  build_stat.txt  cmake_install.cmake  commits_ahead.txt  como_evitar_spaghetti_code.txt  compile_commands.json  diff_stat.txt  download_model.sh  example_discursive_system.discursive.json  example_narrative_observation.json  example_recommendation_trajectory.recommendation.json  imgui.ini  iw_epistemic_contract_fixes.md  large_files.txt  last_commit.txt  (+10 more)
.github/workflows/: ci.yml
.history/: Nota_1767645289_20260108_144314.md  Nota_1767645289_20260108_144957.md  Nota_1767645289_20260108_145025.md  Nota_1767645289_20260108_145036.md  Nota_260106_0419_transcricao_20260108_144229.md  Nota_260106_0419_transcricao_20260108_145932.md  Nota_260106_0419_transcricao_20260108_150100.md  Nota_260106_0419_transcricao_20260108_150103.md  Nota_260106_0419_transcricao_20260108_150112.md  Nota_260106_2029_transcricao_20260108_144249.md  Nota_260106_2029_transcricao_20260108_145954.md  Nota_260106_2029_transcricao_20260202_081135.md  Nota_ResProd_SSE_SAIT_20260108_145907.md  _Consolidated_Tasks_20260108_144252.md  _Consolidated_Tasks_20260108_145956.md  _Consolidated_Tasks_20260109_212038.md  _Consolidated_Tasks_20260202_081136.md
.obsidian/: graph.json  workspace.json
adr/: ADR-001_Narrative_Observation_Non_Inferential.md  ADR-002_NarrativeVector_Versioning.md  ADR-003_Epistemic_Regime_Explicit.md  ADR-004_Deterministic_Extraction.md  ADR-005_Narrative_Bundle_Export_Contract.md  ADR-006_IW_STRATA_Integration_Contract.md  ADR-007_Bifasic_Scientific_Ingestion.md  ADR-008_Structural_Exclusion_Rule.md  ADR-009_Autonomous_Cognitive_Orchestrator.md  ADR-010_Async_Task_Manager.md  ADR-011_Contextual_RAG_Architecture.md  ADR-012_Semantic_States_and_Contracts.md  ADR-013_DocOps_Governed_Document_Workbench.md  ADR-014_Internal_Evaluations_Registry.md  ADR-015_DocOps_Workspace_Contract.md  ADR-016_DocOps_Prompt_Profile_Registry.md  ADR-017_DocOps_Controlled_Edit_Protocol.md  ADR_INDEX.md  ADR_TEMPLATE.md  IW_ADR-000_Governance_Model_Overview_v0_1.md  README.md
dialogues/: 2026-01-08_09-20-18_Nota_1767645289.md.md  Nota_ResProd_SSE_SAIT.md_2026-02-02_08-12-28.md  Nota_ResProd_SSE_SAIT.md_2026-02-02_09-20-44.md  Nota_ResProd_SSE_SAIT.md_2026-02-02_09-22-26.md  Nota_ResProd_SSE_SAIT.md_2026-02-02_09-28-48.md  _2026-02-02_09-20-32.md
docops/: README.md  docops.yaml  project_registry.yaml
docops/profiles/: architect.yaml  author.yaml  editor.yaml  reviewer.yaml
docops/templates/: EDIT_REQUEST_TEMPLATE.md
docs/: DOCOPS-000_Vision_and_Boundary.md  IW_ADR_Base_Documentation_Pack.md  IW_ADR_COMPLETE_FOUNDATION.md  IW_ADR_Governance.md  IW_INVARIANT_MATRIX.md  IW_MATURITY_MODEL.md  IW_Methodological_Foundations.tex  LLM_PROMPT_GUIDELINES.md  NarrativeObservation.example.json  SCIENTIFIC_INGESTION_CONTEXT.md  TECHNICAL_GUIDE.md  WRITING_TRAJECTORY_IMPLEMENTATION.md
docs/avaliacoes/: README.md  TEMPLATE.md
html/: doxygen_crawl.html  index.html  md_CHANGELOG.html  md_DDD__IdeaWalker__Architecture.html  md_IMPLEMENTATION__PLAN__AUDIO__INGESTION.html  md_IdeaWalker_01Knowledge_01Base.html  md_README.html  md_VISUAL__ARCHITECTURE__PLAN.html  menudata.js  navtreedata.js  navtreeindex0.js  pages.html
html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_2.js  all_21.js  all_22.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  pages_0.js  pages_1.js  pages_10.js  pages_14.js  pages_15.js  pages_16.js  pages_17.js  (+21 more)
inbox/: 260106_0419_transcricao.txt
latex/: md_CHANGELOG.tex  md_DDD__IdeaWalker__Architecture.tex  md_IMPLEMENTATION__PLAN__AUDIO__INGESTION.tex  md_IdeaWalker_01Knowledge_01Base.tex  md_README.tex  md_VISUAL__ARCHITECTURE__PLAN.tex  refman.tex
notas/: Nota_1767645289.md  Nota_1767646148.md  Nota_260106_0419_transcricao.md
observations/: 20260108_144111_ResProd_SSE_SAIT.pdf.md  20260108_144120_260106_0419_transcricao.txt.md  20260108_144132_260106_2029_transcricao.txt.md
reports/architecture/: ArchitectureDecisionIndex.latest.json  ArchitectureDecisionIndex.latest.md
scripts/: audit_adr_index.sh  audit_docops_contract.sh  audit_evaluations.sh  build_adr_catalog.py
src/app/: IdeaWalkerApp.cpp  IdeaWalkerApp.hpp
src/application/: AIProcessingService.cpp  AIProcessingService.hpp  AppServices.hpp  AsyncTaskManager.hpp  ContextAssembler.cpp  ContextAssembler.hpp  ConversationService.cpp  ConversationService.hpp  DocumentIngestionService.cpp  DocumentIngestionService.hpp  GraphService.cpp  GraphService.hpp  KnowledgeExportService.cpp  KnowledgeExportService.hpp  KnowledgeService.cpp  KnowledgeService.hpp  OrganizerService.cpp  OrganizerService.hpp  ProjectService.cpp  ProjectService.hpp  SuggestionService.cpp  SuggestionService.hpp
src/domain/: AIService.hpp  Actionable.hpp  CognitiveModel.hpp  Insight.hpp  ObservationRecord.hpp  SourceArtifact.hpp  Suggestion.hpp  ThoughtRepository.hpp  TranscriptionService.hpp
src/infrastructure/: AudioUtils.cpp  AudioUtils.hpp  ConfigLoader.cpp  ConfigLoader.hpp  ContentExtractor.hpp  EmbeddingCache.cpp  EmbeddingCache.hpp  FileRepository.cpp  FileRepository.hpp  FileSystemArtifactScanner.cpp  FileSystemArtifactScanner.hpp  PathUtils.cpp  (+16 more)
(+66 files in other folders)
